--- a/cumulus/parachains/runtimes/testing/penpal/Cargo.toml
+++ b/cumulus/parachains/runtimes/testing/penpal/Cargo.toml
@@ -82,7 +82,7 @@ parachain-info = { workspace = true }
 parachains-common = { workspace = true }
 snowbridge-inbound-queue-primitives = { workspace = true }
 
-primitive-types = { version = "0.12.1", default-features = false, features = [
+primitive-types = { workspace = true, default-features = false, features = [
 	"codec",
 	"num-traits",
 	"scale-info",
