--- a/substrate/client/tracing/Cargo.toml
+++ b/substrate/client/tracing/Cargo.toml
@@ -36,10 +36,7 @@ sp-tracing = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 tracing = { workspace = true, default-features = true }
 tracing-log = { workspace = true }
-tracing-subscriber = { workspace = true, features = [
-	"env-filter",
-	"parking_lot",
-] }
+tracing-subscriber = { workspace = true, features = ["env-filter", "parking_lot"] }
 
 [dev-dependencies]
 criterion = { workspace = true, default-features = true }
