--- a/bridges/snowbridge/pallets/ethereum-client/fixtures/Cargo.toml
+++ b/bridges/snowbridge/pallets/ethereum-client/fixtures/Cargo.toml
@@ -19,11 +19,11 @@ exclude-from-umbrella = true
 
 [dependencies]
 hex-literal = { workspace = true, default-features = true }
-snowbridge-beacon-primitives.workspace = true
-snowbridge-core.workspace = true
-snowbridge-verification-primitives.workspace = true
-sp-core.workspace = true
-sp-std.workspace = true
+snowbridge-beacon-primitives = { workspace = true }
+snowbridge-core = { workspace = true }
+snowbridge-verification-primitives = { workspace = true }
+sp-core = { workspace = true }
+sp-std = { workspace = true }
 
 [features]
 default = ["std"]
