--- a/bridges/chains/chain-bridge-hub-rococo/Cargo.toml
+++ b/bridges/chains/chain-bridge-hub-rococo/Cargo.toml
@@ -26,7 +26,7 @@ bp-xcm-bridge-hub = { workspace = true }
 frame-support = { workspace = true }
 sp-api = { workspace = true }
 sp-runtime = { workspace = true }
-sp-std = { workspace = tbrrue }
+sp-std = { workspace = true }
 
 [features]
 default = ["std"]
