--- a/cumulus/primitives/core/Cargo.toml
+++ b/cumulus/primitives/core/Cargo.toml
@@ -14,7 +14,7 @@ workspace = true
 [dependencies]
 codec = { features = ["derive"], workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-tracing.workspace = true
+tracing = { workspace = true }
 
 # Substrate
 sp-api = { workspace = true }
