--- a/Cargo.toml
+++ b/Cargo.toml
@@ -549,6 +549,7 @@ members = [
 	"substrate/utils/prometheus",
 	"substrate/utils/substrate-bip39",
 	"substrate/utils/wasm-builder",
+    "substrate/zombienet-sdk",
 	"templates/minimal/node",
 	"templates/minimal/pallets/template",
 	"templates/minimal/runtime",
