--- a/substrate/utils/frame/storage-access-test-runtime/Cargo.toml
+++ b/substrate/utils/frame/storage-access-test-runtime/Cargo.toml
@@ -12,9 +12,9 @@ publish = false
 [lints]
 workspace = true
 
-
 [dependencies]
-
+cumulus-pallet-parachain-system = { workspace = true }
+sp-runtime = { workspace = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
@@ -23,4 +23,6 @@ substrate-wasm-builder = { optional = true, workspace = true, default-features =
 default = ["std"]
 std = [
 	"substrate-wasm-builder",
+	"cumulus-pallet-parachain-system/std",
+	"cumulus-pallet-parachain-system/runtime-benchmarks",
 ]
