Propagate missign features
Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/substrate/primitives/io/Cargo.toml
+++ b/substrate/primitives/io/Cargo.toml
@@ -104,4 +104,7 @@ bls-experimental = ["sp-keystore/bls-experimental"]
 # This feature adds Bandersnatch crypto primitives.
 # It should not be used in production since the implementation and interface may still
 # be subject to significant changes.
-bandersnatch-experimental = ["sp-keystore/bandersnatch-experimental"]
+bandersnatch-experimental = [
+	"sp-core/bandersnatch-experimental",
+	"sp-keystore/bandersnatch-experimental",
+]
