Introduce ark-vrf (#7669)
Superseeds `bandersnatch_vrfs` with
[ark-vrf](https://crates.io/crates/ark-vrf)

- Same crypto as JAM
- With a spec: github.com/davxy/bandersnatch-vrf-spec
- Published on crates.io

https://github.com/paritytech/polkadot-sdk/pull/7670 follow up

NOTE: this crypto is under experimental feat

---------

Signed-off-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>
Co-authored-by: Sebastian Kunert <skunert49@gmail.com>
Co-authored-by: cmd[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Oliver Tale-Yazdi <oliver.tale-yazdi@parity.io>

--- a/substrate/primitives/core/Cargo.toml
+++ b/substrate/primitives/core/Cargo.toml
@@ -62,9 +62,7 @@ secp256k1 = { features = ["alloc", "recovery"], optional = true, workspace = tru
 # bls crypto
 w3f-bls = { optional = true, workspace = true }
 # bandersnatch crypto
-bandersnatch_vrfs = { git = "https://github.com/davxy/ring-vrf", branch = "locked", default-features = false, features = [
-	"substrate-curves",
-], optional = true }
+ark-vrf = { optional = true, workspace = true, features = ["bandersnatch", "ring"] }
 
 [dev-dependencies]
 criterion = { workspace = true, default-features = true }
@@ -82,7 +80,7 @@ bench = false
 default = ["std"]
 
 std = [
-	"bandersnatch_vrfs?/std",
+	"ark-vrf?/std",
 	"bip39/rand",
 	"bip39/std",
 	"blake2/std",
@@ -157,4 +155,4 @@ bls-experimental = ["w3f-bls"]
 # This feature adds Bandersnatch crypto primitives.
 # It should not be used in production since the implementation and interface may still
 # be subject to significant changes.
-bandersnatch-experimental = ["bandersnatch_vrfs"]
+bandersnatch-experimental = ["ark-vrf"]
